--- a/HanoiDetails/HanoiDetails.html
+++ b/HanoiDetails/HanoiDetails.html
@@ -89,8 +89,8 @@
     </style>
 </head>
 <body>
-    <a href="/" class="home-button">Home</a> 
-    <a href="/HanoiGame/index.html" class="play-button">Jogar</a> 
+    <a href="https://vansaneduardo.github.io/PlayLearn/" class="home-button">Home</a> 
+    <a href="https://vansaneduardo.github.io/PlayLearn/HanoiGame/index.html" class="play-button">Jogar</a> 
     <div class="container">
         <h1>Desenvolvendo o Jogo Torre de Hanói</h1>
         <p>Nesta página, vamos entender como desenvolver o jogo Torre de Hanói com explicações bem simples. Se você está começando agora, não se preocupe, vamos ver tudo de forma clara e fácil!</p>
