--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -27,7 +27,7 @@
       <button class="winning-message-button" data-restart-button>
         Reiniciar!
       </button>
-      <a href="/"><button class="winning-message-button" data-restart-button> Voltar Ao PlayLearn</button>
+      <a href="https://vansaneduardo.github.io/PlayLearn/"><button class="winning-message-button" data-restart-button> Voltar Ao PlayLearn</button>
        
     </div>
     <script src="./script.js"></script>
