--- a/ForcaDetails/index.html
+++ b/ForcaDetails/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="https://vansaneduardo.github.io/PlayLearn/" class="home-button">Home</a> 
+    <a href="https://vansaneduardo.github.io/PlayLearn" class="home-button">Home</a> 
     <a href="https://vansaneduardo.github.io/PlayLearn/ForcaGame/forca.html" class="play-button">Jogar</a> 
 
     <div class="container">
