--- a/GhostAtack/index.html
+++ b/GhostAtack/index.html
@@ -29,7 +29,7 @@
         </div>
 
       <div class="button-game">
-        <a href="https://vansaneduardo.github.io/PlayLearn/"><button >Home</button></a>
+        <a href="https://vansaneduardo.github.io/PlayLearn"><button >Home</button></a>
       </div>
        
       </div>
