--- a/HanoiDetails/HanoiDetails.html
+++ b/HanoiDetails/HanoiDetails.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body>
-    <a href="https://vansaneduardo.github.io/PlayLearn/" class="home-button">Home</a> 
+    <a href="https://vansaneduardo.github.io/PlayLearn" class="home-button">Home</a> 
     <a href="https://vansaneduardo.github.io/PlayLearn/HanoiGame/index.html" class="play-button">Jogar</a> 
     <div class="container">
         <h1>Desenvolvendo o Jogo Torre de Hanói</h1>
