--- a/SnakeDetails/index.html
+++ b/SnakeDetails/index.html
@@ -184,7 +184,7 @@
         </li>
       </section>
 
-      <a href="https://vansaneduardo.github.io/PlayLearn/" class="home-button">Home</a>
+      <a href="https://vansaneduardo.github.io/PlayLearn" class="home-button">Home</a>
       <a href="https://vansaneduardo.github.io/PlayLearn/SnakeGame/index.html" class="play-button">Jogar</a>
     </div>
   </body>
