--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -25,7 +25,7 @@
             
             Jogar novamente
         </button>
-        <a href="https://vansaneduardo.github.io/PlayLearn/"><button id="home">Home</button></a>
+        <a href="https://vansaneduardo.github.io/PlayLearn"><button id="home">Home</button></a>
     </div>
 
     <canvas width="600" height="600"></canvas>
