--- a/ForcaGame/forca.html
+++ b/ForcaGame/forca.html
@@ -104,7 +104,7 @@
     <img src="img/jogarNovamente.gif" id="jogarNovamente"></img> 
     <button id="recarregar" onclick="sortear()"><i class='bx bx-refresh'></i></button> 
     <button id="jogarAutomatico" onclick="listaAutomatica()"><i class='bx bx-pause-circle'></i></button>
-    <a href="https://vansaneduardo.github.io/PlayLearn/"> <button id="home"><i class='bx bx-home-alt-2'></i></button></a>
+    <a href="https://vansaneduardo.github.io/PlayLearn"> <button id="home"><i class='bx bx-home-alt-2'></i></button></a>
 
     <script src="js/forca.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
