--- a/HanoiDetails/HanoiDetails.html
+++ b/HanoiDetails/HanoiDetails.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="logohanoi.ico" type="image/x-icon">
     <title>Torre de Hanói - Saiba Mais</title>
     <style>
         * {
