--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -27,6 +27,16 @@
         </button>
         <a href="https://vansaneduardo.github.io/PlayLearn"><button id="home">Home</button></a>
     </div>
+    <div class="controls">
+        <div class="arrow-buttons">
+          <button class="arrow up">↑</button>
+        </div>
+        <div class="arrow-buttons">
+          <button class="arrow left">←</button>
+          <button class="arrow down">↓</button>
+          <button class="arrow right">→</button>
+        </div>
+      </div>
 
     <canvas width="600" height="600"></canvas>
     <script src="./js/script.js"></script>
