--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./assets/snake.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./assets/snake.ico" type="image/x-icon" />
 
     <title>SnakeGame</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="score">score: <span class="score--value">00</span></div>
 
     <div class="menu-screen">
-        <span class="game-over">game over</span>
-        <span class="final-score">score <span>00</span></span>
+      <span class="game-over">game over</span>
+      <span class="final-score">score <span>00</span></span>
 
-        <button class="btn-play">
-            <span class="material-symbols-outlined">
-                play_circle
-            </span>
-            
-            Jogar novamente
-        </button>
-        <a href="https://vansaneduardo.github.io/PlayLearn"><button id="home">Home</button></a>
+      <button class="btn-play">
+        <span class="material-symbols-outlined"> play_circle </span>
+
+        Jogar novamente
+      </button>
+      <a href="https://vansaneduardo.github.io/PlayLearn"
+        ><button id="home">Home</button></a
+      >
     </div>
     <div class="controls">
-        <div class="arrow-buttons">
+      <div class="arrow-buttons">
+        <button class="arrow left">←</button>
+        <div class="arrow-center">
           <button class="arrow up">↑</button>
-        </div>
-        <div class="arrow-buttons">
-          <button class="arrow left">←</button>
           <button class="arrow down">↓</button>
-          <button class="arrow right">→</button>
         </div>
+        <button class="arrow right">→</button>
       </div>
+    </div>
 
     <canvas width="600" height="600"></canvas>
     <script src="./js/script.js"></script>
-</body>
+  </body>
 </html>
