--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -32,12 +32,12 @@
     </div>
     <div class="controls">
       <div class="arrow-buttons">
-        <button class="arrow left">←</button>
+        <button class="arrow left"></button>
         <div class="arrow-center">
-          <button class="arrow up">↑</button>
-          <button class="arrow down">↓</button>
+          <button class="arrow up"></button>
+          <button class="arrow down"></button>
         </div>
-        <button class="arrow right">→</button>
+        <button class="arrow right"></button>
       </div>
     </div>
 
