--- a/GhostDetails/index.html
+++ b/GhostDetails/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Ghost Atack - Saiba Mais</title>
     <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
