--- a/GhostDetails/index.html
+++ b/GhostDetails/index.html
@@ -93,8 +93,8 @@
             <p>Os botões de reiniciar e jogar novamente recarregam a página, reiniciando o jogo.</p>
         </section>
         
-        <a href="https://vansaneduardo.github.io/PlayLearn" class="home-button">HOME</a>
-        <a href="https://vansaneduardo.github.io/PlayLearn/GhostAtack/index.html" class="play-button">Jogar</a>
+        <a href="../../index.html" class="home-button">HOME</a>
+        <a href="../GhostAtack/index.html" class="play-button">Jogar</a>
     </div>
 </body>
 </html>
