--- a/SnakeDetails/index.html
+++ b/SnakeDetails/index.html
@@ -185,8 +185,8 @@
         </li>
       </section>
 
-      <a href="https://vansaneduardo.github.io/PlayLearn" class="home-button">Home</a>
-      <a href="https://vansaneduardo.github.io/PlayLearn/SnakeGame/index.html" class="play-button">Jogar</a>
+      <a href="../../index.html" class="home-button">Home</a>
+      <a href="../SnakeGame/index.html" class="play-button">Jogar</a>
     </div>
   </body>
 </html>
