--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -26,7 +26,7 @@
 
         Jogar novamente
       </button>
-      <a href="https://vansaneduardo.github.io/PlayLearn"
+      <a href="../../index.html"
         ><button id="home">Home</button></a
       >
     </div>
