--- a/ForcaDetails/index.html
+++ b/ForcaDetails/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="https://vansaneduardo.github.io/PlayLearn" class="home-button">Home</a> 
-    <a href="https://vansaneduardo.github.io/PlayLearn/ForcaGame/forca.html" class="play-button">Jogar</a> 
+    <a href="../../index.html" class="home-button">Home</a> 
+    <a href="../ForcaGame/forca.html" class="play-button">Jogar</a> 
 
     <div class="container">
         <h1>Desenvolvendo o Jogo da Forca</h1>
