--- a/ForcaDetails/index.html
+++ b/ForcaDetails/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/" class="home-button">Home</a> 
+    <a href="/PlayLearn" class="home-button">Home</a> 
     <a href="../ForcaGame/forca.html" class="play-button">Jogar</a> 
 
     <div class="container">
