--- a/GhostDetails/index.html
+++ b/GhostDetails/index.html
@@ -93,7 +93,7 @@
             <p>Os botões de reiniciar e jogar novamente recarregam a página, reiniciando o jogo.</p>
         </section>
         
-        <a href="../../index.html" class="home-button">HOME</a>
+        <a href="/PlayLearn" class="home-button">HOME</a>
         <a href="../GhostAtack/index.html" class="play-button">Jogar</a>
     </div>
 </body>
