--- a/HanoiDetails/HanoiDetails.html
+++ b/HanoiDetails/HanoiDetails.html
@@ -90,7 +90,7 @@
     </style>
 </head>
 <body>
-    <a href="../../index.html" class="home-button">Home</a> 
+    <a href="/PlayLearn" class="home-button">Home</a> 
     <a href="../HanoiGame/index.html" class="play-button">Jogar</a> 
     <div class="container">
         <h1>Desenvolvendo o Jogo Torre de Hanói</h1>
