--- a/HanoiGame/index.html
+++ b/HanoiGame/index.html
@@ -60,7 +60,7 @@ Torre de Hanoi
 					<button class="bu" onclick="iniciar(5)">5</button>
 					<button class="bu" onclick="iniciar(6)">6</button>
 					<button class="bu" onclick="iniciar(7)">7</button>
-					<a href="../../index.html"><button class="bu"><i class="fa-solid fa-house"></i></button></a>
+					<a href="/PlayLearn"><button class="bu"><i class="fa-solid fa-house"></i></button></a>
 					<!-- ////////////////// -->
 				</p>
 
