--- a/VelhaDetails/index.html
+++ b/VelhaDetails/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../../index.html" class="home-button">Home</a>
+    <a href="/PlayLearn" class="home-button">Home</a>
     <a href="../VelhaGame/index.html" class="play-button">Jogar</a>
     <div class="container">
       <h1>Explicação Completa: Jogo da Velha em JavaScript</h1>
