--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -27,7 +27,7 @@
       <button class="winning-message-button" data-restart-button>
         Reiniciar!
       </button>
-      <a href="../../index.html"><button class="winning-message-button" data-restart-button> Voltar Ao PlayLearn</button>
+      <a href="/PlayLearn"><button class="winning-message-button" data-restart-button> Voltar Ao PlayLearn</button>
        
     </div>
     <script src="./script.js"></script>
