--- a/SnakeDetails/index.html
+++ b/SnakeDetails/index.html
@@ -185,7 +185,7 @@
         </li>
       </section>
 
-      <a href="../../index.html" class="home-button">Home</a>
+      <a href="/PlayLearn" class="home-button">Home</a>
       <a href="../SnakeGame/index.html" class="play-button">Jogar</a>
     </div>
   </body>
