--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -26,9 +26,7 @@
 
         Jogar novamente
       </button>
-      <a href="/PlayLearn"
-        ><button id="home">Home</button></a
-      >
+      <a href="/PlayLearn"><button id="home">Home</button></a>
     </div>
     <div class="controls">
       <div class="arrow-buttons">
