--- a/MemoryGame/index.html
+++ b/MemoryGame/index.html
@@ -18,7 +18,7 @@
     <div class="mensagem">
       <p>Jogo da Memória</p>
       <button id="start" onclick="startGame()">Começar</button>
-      <a href="/PlayLearn"><button id="home">Home</button></a>
+      <a href="/PlayLearn"><button class="home">Home</button></a>
     </div>
   </div>
 
@@ -40,6 +40,7 @@
     <div class="mensagem">
       <p id="resultado"></p>
       <button id="restart" onclick="restart()">Começar</button>
+      <a href="/PlayLearn"><button class="home">Home</button></a>
     </div>
   </div>
 
