--- a/VelhaDetails/index.html
+++ b/VelhaDetails/index.html
@@ -2,9 +2,11 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="velhaicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Velha - Explicação Detalhada</title>
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
     <a href="/PlayLearn" class="home-button">Home</a>
