--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -10,6 +10,14 @@
     <title>Jogo da Velha</title>
   </head>
   <body>
+
+    <div class="alert">
+        <div class="modal">
+          <h3>Olá! Por enquanto, o jogo é multiplayer local.</h3>
+          <p>Se Divirta&#128540;!</p>
+        </div>
+    </div>
+
     <div class="board" data-board>
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
@@ -28,7 +36,6 @@
         Reiniciar!
       </button>
       <a href="/PlayLearn"><button class="winning-message-button" data-restart-button> Voltar Ao PlayLearn</button>
-       
     </div>
     <script src="./script.js"></script>
   </body>
