--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -13,7 +13,7 @@
 
     <div class="alert">
         <div class="modal">
-          <h3>Olá! Por enquanto, o jogo é multiplayer local.</h3>
+          <h3>Olá! Por enquanto, o jogo é Multiplayer local.</h3>
           <p>Se Divirta&#128540;!</p>
         </div>
     </div>
