--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -11,12 +11,11 @@
   </head>
   <body>
 
-    <div class="alert">
-        <div class="modal">
-          <h3>Olá! Por enquanto, o jogo é Multiplayer local.</h3>
-          <p>Se Divirta&#128540;!</p>
-        </div>
-    </div>
+    <div class="buttons">
+      <button id="multplayer">MultPlayer Local</button>
+      <button id="bot">Jogar com um robô</button> 
+      </div>
+  
 
     <div class="board" data-board>
       <div class="cell" data-cell></div>
