--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -14,8 +14,13 @@
     <div class="buttons">
       <button id="multplayer">MultPlayer Local</button>
       <button id="bot">Jogar com um robô</button> 
+      <div id="difficulty-selection">
+        <button data-difficulty="easy">Fácil</button>
+        <button data-difficulty="medium">Médio</button>
+        <button data-difficulty="hard">Difícil</button>
       </div>
-  
+      </div>
+    
 
     <div class="board" data-board>
       <div class="cell" data-cell></div>
