--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -18,6 +18,7 @@
         <button data-difficulty="easy">Fácil</button>
         <button data-difficulty="medium">Médio</button>
         <button data-difficulty="hard">Difícil</button>
+        <button data-difficulty="impossible">Impossível</button>
       </div>
       </div>
     
