--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -12,8 +12,10 @@
   <body>
 
     <div class="buttons">
-      <button id="multplayer">MultPlayer Local</button>
+      <div class="buttons-controler">
+        <button id="multplayer">MultPlayer Local</button>
       <button id="bot">Jogar com um robô</button> 
+      </div>
       <div id="difficulty-selection">
         <button data-difficulty="easy">Fácil</button>
         <button data-difficulty="medium">Médio</button>
