--- a/VelhaGame/index.html
+++ b/VelhaGame/index.html
@@ -17,11 +17,12 @@
       <button id="bot">Jogar com um robô</button> 
       </div>
       <div id="difficulty-selection">
-        <button data-difficulty="easy">Fácil</button>
-        <button data-difficulty="medium">Médio</button>
-        <button data-difficulty="hard">Difícil</button>
-        <button data-difficulty="impossible">Impossível</button>
+        <button data-difficulty="facil">Fácil</button>
+        <button data-difficulty="medio">Médio</button>
+        <button data-difficulty="dificil">Difícil</button>
+        <button data-difficulty="impossivel">Impossível</button>
       </div>
+      <p id="difficulty"></p>
       </div>
     
 
